--- a/src/taplist.css
+++ b/src/taplist.css
@@ -35,14 +35,32 @@ body {
   clear:both; height:250; position:relative;
 }*/
 
-#beer-tap {
+.beer-tap {
   background: #FFFFFF;
   -moz-border-radius: 15px;
   border-radius: 15px;
   margin: 15px auto;
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+  /* from col-md-3 */
+  position: relative;
+  min-height: 1px;
+  width: 25%;
+  float: left;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.tap-title {
+  width: 100%
+  float: left;
+  text-align: center;
+
+/* from row - seems unneeded
+  margin-left: -15px;
+  margin-right: -15px;*/
 }
 
 .beer-detail-entry {
